Version 1.3.10+svn:
 * campaign server
   * fixed a bug which broke uploads with a .cfg file next to the campaign
     directory
 * graphics:
   * added user-contributed graphic updates for 'storm trident', 'ankh' and 'staff'
     pick-up items
 * language and i18n:
   * updated translations: Czech, French, Polish, Portuguese (Brazil), Swedish
 * WML engine:
   * implemented the #ifndef directive, the opposite of #ifdef, in the preprocessor,
     to parse the following block only when the symbol is not defined
   * fix the recall list duplication bug (bug #10183)
 * units:
   * balancing changes:
     * increased the melee attack of the Saurian Oracle from 5-2 to 4-3
 * WML terrains:
   * added 'Mushroom Grove lit' (on cave) using string 'Uu^Ufi'
   * [modify_side] can now override the recruit list, just like [set_recruit]; should be
     the preferred method at some point.
 * miscellaneous and bug fixes:
   * fixed segmentation fault on loading saved games from the multiplayer user interface
   * added some extra headers for gcc 4.3 (based on patch #842)

Version 1.3.10:
 * campaign server
   * it's now possible to delete a campaign with the master password
   * added initial support for the wescamp translation integration
     (not finished yet)
   * You can now supply a .pbl file within the directory for a campaign
     as _server.pbl, rather than externally at the same level as the directory.
     Both the client code in the game and the Python client in utils/ have been
     enhanced to allow this.
 * campaigns:
   * Eastern Invasion
     * Fixed bug #10195, related to Holy Amulet's description
     * some gold balancing for 'Xenophobia' and 'Lake Vrug'
   * Liberty
     * in 'The Raid', the accompanying peasants are no longer loyal. Also, the
       scenario now gives an early finish bonus
     * turn limits of 'A Strategy of Hope' lowered, to prevent massive amounts
       of carryover gold
   * Northern Rebirth
     * Balancing polishing and bug fixing.